Base structure of the project